# botijo

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/: btj_aligned_allocator.h  btj_assert.h  btj_color.h  btj_config.h  btj_constants.h  btj_core.h  btj_exception.h  btj_flip.h  btj_glm.h  btj_graphics.h  btj_image.h  btj_key_event.h  btj_keyboard.h  btj_layer.h  btj_logger.h  btj_optional.h  btj_position_f.h  btj_position_i.h  btj_rect_f.h  btj_rect_i.h  btj_size_f.h  btj_size_i.h  btj_sprite.h  btj_string.h  btj_string_view.h  btj_texture.h  btj_texture_region.h  btj_vector.h  btj_window_config.h
lib/src/: btj_aligned_allocator.cpp  btj_core.cpp  btj_core_backend.h  btj_event.h  btj_global_pointers.cpp  btj_global_pointers.h  btj_graphics.cpp  btj_graphics_backend.h  btj_graphics_impl.cpp  btj_graphics_impl.h  btj_image.cpp  btj_keyboard.cpp  btj_keyboard_backend.h  btj_keyboard_impl.cpp  btj_keyboard_impl.h  btj_layer.cpp  btj_layers.cpp  btj_layers.h  btj_quicksort.h  btj_rotation.h  btj_sort_info_comparator.h  btj_sprite.cpp  btj_sprite_graphics.h  btj_sprites.cpp  btj_sprites.h  btj_texture.cpp  btj_texture_graphics.h  btj_texture_info.h  btj_texture_region.cpp  btj_textures.cpp  btj_textures.h  btj_transform.h  btj_window_backend.h  btj_window_config.cpp  btj_window_impl.cpp  btj_window_impl.h
lib/src/opengl_graphics_backend/: btj_graphics_backend.cpp  btj_shaders.h
lib/src/sdl_core_backend/: btj_core_backend.cpp
lib/src/sdl_keyboard_backend/: btj_keyboard_backend.cpp
lib/src/sdl_window_backend/: btj_window_backend.cpp
tests/: CMakeLists.txt
tests/data/: LICENSE
tests/src/: test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
